# ghost-scrub

./: .ghostscrub  Cargo.toml  LICENSE  README.md  template.ghostscrub
.github/workflows/: ci.yml
src/: config.rs  main.rs  processor.rs  walker.rs  watcher.rs
